# autopay

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  demo.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  schema.sql  uvicorn.err
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  graphs.py  nodes.py  state.py
app/api/: __init__.py  auth.py  bills.py  health.py  kyc.py  wallet.py  webhooks.py
app/core/: __init__.py  config.py  database.py  http.py  logging.py  scheduler.py  security.py
app/handlers/: __init__.py  auth.py  bill_conversation.py  helpers.py
app/models/: __init__.py  audit_log.py  bill.py  enums.py  kyc.py  refresh_token.py  telegram_link_code.py  transaction.py  user.py  virtual_account.py  webhook_event.py
app/schemas/: __init__.py  auth.py  bill.py  kyc.py  transaction.py
app/services/: __init__.py  audit.py  auth.py  crypto.py  date_parser.py  loaders.py  payout.py  telegram.py
app/services/payments/: __init__.py  base.py  exceptions.py  nomba.py  paystack.py
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_webhook_events.py
scripts/: entrypoint.sh  seed.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_auth_endpoints.py  test_bill_endpoints.py  test_db_rollback.py  test_kyc_endpoints.py  test_wallet_endpoints.py  test_webhook_endpoints.py
tests/unit/: conftest.py  test_agent.py  test_audit.py  test_crypto.py  test_date_parser.py  test_models.py  test_payment_math.py  test_paystack.py  test_scheduler.py  test_security.py  test_smoke.py  test_telegram_handlers.py
